# solana-accountsdb-plugin-postgres

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
ci/: cargo-build-test.sh  install-build-deps.sh  rust-version.sh  start_postgres.sh
scripts/: create_schema.sql  drop_schema.sql  postgresql.conf
src/: accountsdb_plugin_postgres.rs  geyser_plugin_postgres.rs  inline_spl_token.rs  inline_spl_token_2022.rs  lib.rs  postgres_client.rs  transaction_selector.rs
src/postgres_client/: postgres_client_account_index.rs  postgres_client_block_metadata.rs  postgres_client_transaction.rs
tests/: test_postgres_plugin.rs
