[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-geyser-plugin-postgres"
description = "The Solana AccountsDb plugin for PostgreSQL database."
version = "1.13.1"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
bytemuck = "1.12.1"
chrono = { version = "0.4.22", features = ["serde"] }
crossbeam-channel = "0.5.6"
log = "0.4.17"
openssl = { version = "0.10.42" }
postgres = { version = "0.19.4", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.4", features = ["derive"] }
postgres-openssl = { version = "0.5.0"}
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
solana-geyser-plugin-interface = { version = "=1.13.1" }
solana-logger = { version = "=1.13.1" }
solana-measure = { version = "=1.13.1" }
solana-metrics = { version = "=1.13.1" }
solana-runtime = { version = "=1.13.1" }
solana-sdk = { version = "=1.13.1" }
solana-transaction-status = { version = "=1.13.1" }
thiserror = "1.0.37"
tokio-postgres = "0.7.7"

[dev-dependencies]
libc = "0.2.134"
libloading = "0.7.3"
serial_test = "0.9.0"
solana-account-decoder = { version = "=1.13.1" }
solana-core = { version = "=1.13.1" }
solana-local-cluster = { version = "=1.13.1" }
solana-net-utils = { version = "=1.13.1" }
solana-streamer = { version = "=1.13.1" }
tempfile = "3.3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
